Name:             cologne
Version:          0.2.0
Description:      Nice smelling ray tracing
License:          BSD3
License-file:     LICENSE
Author:           Joel Burget
Maintainer:       joelburget@gmail.com
Homepage:         http://programsthatsmellgood.com/cologne/
Build-Type:       Simple
Cabal-Version:    >=1.2

Executable cologne
  Main-Is:        Cologne.hs
  Build-Depends:  base >= 3 && < 5, haskell98, mtl, cmdargs == 0.7, parallel, random, parsec, assimp, vect, repa, repa-devil >= 0.1.1
  ghc-options:    -funbox-strict-fields -ignore-package monads-fd -Wall
